[package]
name = "cirno_core"
version = "0.0.1"
edition = "2021"
authors = ["Chuan Wang"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sbi-rt = {version = "0.0.2", features = ["legacy"]}
log = "0.4"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
riscv = { git = "https://github.com/MuoDoo/riscv", features = ["inline-asm"] }


[profile.release]
debug = true
